turtleart.circletwo.CircleTwo.scala.error
Compilation error:
CircleTwo:5: error: ';' expected but ')' found.
  baisseCrayon())
                ^