turtleart.circletwo.CircleTwo.scala.code
override def run() {
  leveCrayon()
  droite(90)
  avance(100)
  baisseCrayon())
  cercle(100)
}